--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@slack/client": "^4.0.0",
+    "ajv": "^6.4.0",
     "async": "^2.5.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -48,7 +49,7 @@
     "echarts": "^4.0.2",
     "ejs": "^2.5.7",
     "exports-loader": "^0.7.0",
-    "expose-loader": "^0.7.4",
+    "expose-loader": "^0.7.5",
     "express": "^4.16.2",
     "file-loader": "^1.1.6",
     "forex.analytics": "mkmarek/forex.analytics#7bc278987700d4204e959af17de61495941d1a14",
